// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineEditableModal component LineEditableModal renders with amount and submitting 1`] = `
<div>
  <div>
    <div
      class="gds-modal-overlay"
    >
      <div
        class="modal-content size-lg"
      >
        <div
          class="modal-header"
        >
          <div
            class="modal-title"
          >
            TITLE
          </div>
        </div>
        <div
          class="modal-body"
        >
          <div
            class="gds-layout-container"
          >
            <div
              class="gds-layout-col"
            >
              <div
                class="gds-layout-row"
              >
                <div
                  class="gds-layout-col"
                >
                  <div
                    class="gds-field-group"
                  >
                    <label
                      class="field-label"
                    >
                      Amount
                    </label>
                    <input
                      class="gds-amount-field"
                      inputmode="numeric"
                      name="amount"
                      type="text"
                      value="1"
                    />
                  </div>
                </div>
                <div
                  class="gds-layout-col"
                >
                  <div
                    class="gds-field-group"
                  >
                    <label
                      class="field-label"
                    >
                      Amount
                    </label>
                    <span
                      class="gds-amount-field amount-field-read-only"
                    >
                      1
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="gds-button-content"
            color="secondary"
            tabindex="0"
            type="button"
          >
            <div
              class="button-label-container"
            >
              Cancel
            </div>
          </button>
          <button
            class="gds-button-content"
            color="primary"
            tabindex="0"
            type="button"
          >
            <div
              class="button-label-container"
            >
              Submit
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LineEditableModal component LineEditableModal renders with amount hidden in form 1`] = `
<div>
  <div>
    <div
      class="gds-modal-overlay"
    >
      <div
        class="modal-content size-lg"
      >
        <div
          class="modal-header"
        >
          <div
            class="modal-title"
          >
            TITLE
          </div>
        </div>
        <div
          class="modal-body"
        >
          <div
            class="gds-layout-container"
          >
            <div
              class="gds-layout-col"
            />
          </div>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="gds-button-content"
            color="secondary"
            tabindex="0"
            type="button"
          >
            <div
              class="button-label-container"
            >
              Cancel
            </div>
          </button>
          <button
            class="gds-button-content"
            color="primary"
            tabindex="0"
            type="button"
          >
            <div
              class="button-label-container"
            >
              Submit
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
